fix backwards compatibility test