@@ -19,6 +19,7 @@
 
 package org.apache.pinot.integration.tests;
 
+import com.google.common.collect.ImmutableMap;
 import java.util.Map;
 import org.apache.helix.SystemPropertyKeys;
 import org.apache.pinot.common.utils.helix.HelixHelper;
@@ -79,8 +80,8 @@ public class HelixZNodeSizeLimitTest extends BaseClusterIntegrationTest {
     HelixHelper.updateIdealState(_helixManager, tableNameWithType, idealState -> {
       Map<String, Map<String, String>> currentAssignment = idealState.getRecord().getMapFields();
       for (int i = 0; i < 500_000; i++) {
-        currentAssignment.put("segment_" + i, Map.of("Server_with_some_reasonable_long_prefix_" + (i % 10), "ONLINE"));
-        currentAssignment.put("segment_" + i, Map.of("Server_with_some_reasonable_long_prefix_" + (i % 9), "ONLINE"));
+        currentAssignment.put("segment_" + i, ImmutableMap.of("Server_with_some_reasonable_long_prefix_" + (i % 10), "ONLINE"));
+        currentAssignment.put("segment_" + i, ImmutableMap.of("Server_with_some_reasonable_long_prefix_" + (i % 9), "ONLINE"));
       }
       return idealState;
     });
